--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,18 +5,108 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/main_color"
     tools:context=".Login">
 
-    <TextView
-        android:id="@+id/txtLoginTitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:text="@string/login_titulo"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="325dp"
+                android:layout_height="318dp"
+                android:contentDescription="Logo_app"
+
+
+                android:rotation="45"
+                android:src="@drawable/icon_app" />
+
+            <EditText
+                android:id="@+id/txt_correo"
+                android:layout_width="match_parent"
+                android:layout_height="60sp"
+                android:layout_marginStart="32sp"
+                android:layout_marginTop="7sp"
+                android:layout_marginEnd="32sp"
+                android:autofillHints="email"
+                android:background="@drawable/edittext_background"
+
+                android:ems="10"
+                android:hint="Correo Electronico"
+                android:inputType="textEmailAddress"
+                android:paddingStart="20sp"
+                android:paddingEnd="20sp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/dark_white" />
+
+            <EditText
+                android:id="@+id/txt_clave"
+                android:layout_width="match_parent"
+                android:layout_height="60sp"
+                android:layout_marginStart="32sp"
+                android:layout_marginTop="35sp"
+                android:layout_marginEnd="32sp"
+                android:autofillHints="password"
+                android:background="@drawable/edittext_background"
+
+                android:ems="10"
+                android:hint="Contraseña"
+                android:inputType="textWebPassword"
+                android:paddingStart="20sp"
+                android:paddingEnd="20sp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/dark_white" />
+
+            <TextView
+                android:id="@+id/lbl_ClavePerdida"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:gravity="center"
+                android:text="@string/lbl_ClavePerdida"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btn_IniciarSesion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32sp"
+                android:layout_marginTop="50sp"
+                android:layout_marginEnd="32sp"
+                android:backgroundTint="@color/sub_color"
+
+
+                android:text="@string/btn_Ingresar"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/lbl_SinCuenta"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50sp"
+                android:gravity="center"
+                android:text="@string/lbl_SinCuenta"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <TextView
+                android:id="@+id/lbl_Registro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/lbl_Registrarme"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
