--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,20 +17,48 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="325dp"
-                android:layout_height="318dp"
-                android:contentDescription="Logo_app"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/img_Portada"
+                    android:layout_width="317dp"
+                    android:layout_height="318dp"
+                    android:contentDescription="Logo_app"
 
 
-                android:rotation="45"
-                android:src="@drawable/icon_app" />
+                    android:rotation="45"
+                    android:src="@drawable/icon_app"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="INICIAR SESION"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    android:letterSpacing="0.1"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.94"
+                    app:layout_constraintVertical_bias="0.04"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <EditText
-                android:id="@+id/txt_correo"
+                android:id="@+id/txt_Correo"
                 android:layout_width="match_parent"
-                android:layout_height="60sp"
+                android:layout_height="50sp"
                 android:layout_marginStart="32sp"
                 android:layout_marginTop="7sp"
                 android:layout_marginEnd="32sp"
@@ -46,11 +74,11 @@
                 android:textColorHint="@color/dark_white" />
 
             <EditText
-                android:id="@+id/txt_clave"
+                android:id="@+id/txt_Clave"
                 android:layout_width="match_parent"
-                android:layout_height="60sp"
+                android:layout_height="50sp"
                 android:layout_marginStart="32sp"
-                android:layout_marginTop="35sp"
+                android:layout_marginTop="20sp"
                 android:layout_marginEnd="32sp"
                 android:autofillHints="password"
                 android:background="@drawable/edittext_background"
@@ -69,20 +97,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10sp"
                 android:gravity="center"
-                android:text="@string/lbl_ClavePerdida"
+                android:text="Olvide mi contraseña"
                 android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/btn_IniciarSesion"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60sp"
                 android:layout_marginStart="32sp"
-                android:layout_marginTop="50sp"
+                android:layout_marginTop="40sp"
                 android:layout_marginEnd="32sp"
                 android:backgroundTint="@color/sub_color"
+                android:letterSpacing="0.1"
 
-
-                android:text="@string/btn_Ingresar"
+                android:text="Ingresar"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -93,7 +121,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50sp"
                 android:gravity="center"
-                android:text="@string/lbl_SinCuenta"
+                android:text="¿No tienes una cuenta?"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -102,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/lbl_Registrarme"
+                android:text="Registrarme aqui"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
