--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,7 @@
                 android:textColor="@color/white" />
 
             <Button
-                android:id="@+id/btn_IniciarSesion"
+                android:id="@+id/btn_Registrarme"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
                 android:layout_marginStart="32sp"
