--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -139,7 +139,7 @@
                 android:textColorHint="@color/dark_white" />
 
             <Button
-                android:id="@+id/btn_IniciarSesion"
+                android:id="@+id/btn_Registrarme"
                 android:layout_width="match_parent"
                 android:layout_height="60sp"
                 android:layout_marginStart="32sp"
