--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -96,7 +96,7 @@
 
                 android:ems="10"
                 android:hint="Nombre de usuario"
-                android:inputType="textEmailAddress"
+                android:inputType="text"
                 android:paddingStart="20sp"
                 android:paddingEnd="20sp"
                 android:textColor="@color/white"
