--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <ImageButton
+                    android:scaleX="-1"
+                    android:id="@+id/btn_Registro"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="Boton para ir al registro"
+                    app:layout_constraintBottom_toBottomOf="parent"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.977"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.03"
+                    app:srcCompat="@android:drawable/ic_menu_revert" />
+
                 <ImageView
                     android:id="@+id/img_Portada"
                     android:layout_width="317dp"
@@ -38,21 +54,20 @@
                     app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/lbl_Registro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="INICIAR SESION"
+                    android:letterSpacing="0.1"
+                    android:text="REGISTRARME"
                     android:textColor="@color/white"
                     android:textSize="15sp"
-                    android:letterSpacing="0.1"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.94"
-                    app:layout_constraintVertical_bias="0.04"
+                    app:layout_constraintHorizontal_bias="0.84"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    />
+                    app:layout_constraintVertical_bias="0.083" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <EditText
@@ -60,7 +75,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:layout_marginStart="32sp"
-                android:layout_marginTop="7sp"
                 android:layout_marginEnd="32sp"
                 android:autofillHints="email"
                 android:background="@drawable/edittext_background"
@@ -93,12 +107,22 @@
 
             <TextView
                 android:id="@+id/lbl_ClavePerdida"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_gravity="end"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="5sp"
+                android:layout_marginEnd="40dp"
                 android:gravity="center"
                 android:text="Olvide mi contraseña"
+                android:paddingTop="7dp"
                 android:textColor="@color/white" />
+            <View
+                android:layout_width="130dp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="40dp"
+                android:layout_height="1dp"
+
+                android:background="@android:color/white" />
 
             <Button
                 android:id="@+id/btn_Ingresar"
@@ -114,25 +138,6 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/lbl_SinCuenta"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50sp"
-                android:gravity="center"
-                android:text="¿No tienes una cuenta?"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent" />
-
-            <TextView
-                android:id="@+id/lbl_Registro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Registrarme aqui"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent" />
 
         </LinearLayout>
     </ScrollView>
