--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -36,20 +36,20 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/lbl_returnLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="REGISTRO"
-                    android:textStyle="bold"
+                    android:letterSpacing="0.1"
+                    android:text="INICIAR SESION"
                     android:textColor="@color/white"
                     android:textSize="15sp"
-                    android:letterSpacing="0.1"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.17"
+                    app:layout_constraintHorizontal_bias="0.16"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.075" />
+                    app:layout_constraintVertical_bias="0.083" />
 
                 <ImageButton
                     android:id="@+id/btn_returnLogin"
@@ -59,7 +59,7 @@
                     android:contentDescription="Boton para regresar a login"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/img_Portada"
-                    app:layout_constraintHorizontal_bias="0.03"
+                    app:layout_constraintHorizontal_bias="0.02"
                     app:layout_constraintVertical_bias="0.03"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -71,7 +71,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="49sp"
                 android:layout_marginStart="32sp"
-                android:layout_marginTop="7sp"
                 android:layout_marginEnd="32sp"
                 android:autofillHints="email"
                 android:background="@drawable/edittext_background"
