--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
 
-    <color name="main_color">#151C33</color>
-    <color name="sub_color">#f4770b</color>
+    <color name="main_color">#0A192C</color>
+    <color name="sub_color">#D16100</color>
     <color name="sub_sub_color">#F6DCAC</color>
     <color name="sub_sub_sub_color">#FEAE6F</color>"
     
-    <color name="dark_main_color">#0A0D18</color>
+    <color name="dark_main_color">#040A11</color>
     <color name="dark_white">#908E8E</color>
 </resources>
