--- a/app/src/main/res/layout/actividad_recuperar_clave.xml
+++ b/app/src/main/res/layout/actividad_recuperar_clave.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context=".RecuperarClaveActivity">
+    tools:context="Auth.ActividadRecuperarClave">
 
     <ScrollView
         android:layout_width="match_parent"
