logueo automatico implementado

--- a/app/src/main/res/layout/actividad_pantalla_principal.xml
+++ b/app/src/main/res/layout/actividad_pantalla_principal.xml
@@ -22,14 +22,14 @@
         android:id="@+id/EspacioMenu"
         android:background="@color/dark_main_color"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         app:itemTextColor="@color/white"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu"
-        app:itemPaddingBottom="0dp"
+        app:itemPaddingBottom="10dp"
         app:itemIconTint="@color/white"
         />
 
