--- a/app/src/main/res/layout/actividad_registro.xml
+++ b/app/src/main/res/layout/actividad_registro.xml
@@ -10,7 +10,11 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,8 +50,8 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.16"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/btn_returnLogin"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.083" />
 
@@ -60,9 +64,9 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/img_Portada"
                     app:layout_constraintHorizontal_bias="0.02"
-                    app:layout_constraintVertical_bias="0.03"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.03"
                     app:srcCompat="@android:drawable/ic_menu_revert" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -82,12 +86,13 @@
                 android:paddingEnd="20sp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/dark_white" />
+
             <EditText
-                android:layout_marginTop="19sp"
                 android:id="@+id/txt_Correo"
                 android:layout_width="match_parent"
                 android:layout_height="49sp"
                 android:layout_marginStart="32sp"
+                android:layout_marginTop="19sp"
                 android:layout_marginEnd="32sp"
                 android:autofillHints="emailAddress"
 
@@ -100,7 +105,6 @@
                 android:paddingEnd="20sp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/dark_white" />
-
 
 
             <EditText
