--- a/app/src/main/res/layout/fragmento_perfil.xml
+++ b/app/src/main/res/layout/fragmento_perfil.xml
@@ -10,10 +10,10 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btn_CerrarSesion"
+        app:layout_constraintBottom_toTopOf="@+id/btn_FP_CerrarSesion"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:layout_marginEnd="10dp">
 
             <ImageView
-                android:id="@+id/img_TarjetaPerfil"
+                android:id="@+id/img_FP_TarjetaPerfil"
                 android:layout_width="match_parent"
                 android:layout_height="100sp"
                 android:src="@drawable/background_card"
@@ -34,7 +34,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/img_IconoUsuario"
+                android:id="@+id/img_FP_IconoUsuario"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginStart="10dp"
@@ -42,13 +42,13 @@
                 android:layout_marginBottom="10dp"
                 android:src="@drawable/ic_baseline_perfil_unselected"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/img_TarjetaPerfil"
+                app:layout_constraintStart_toStartOf="@+id/img_FP_TarjetaPerfil"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.533"
                 app:tint="@color/white" />
 
             <TextView
-                android:id="@+id/txt_NombreUsuario"
+                android:id="@+id/txt_FP_NombreUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -56,12 +56,12 @@
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/img_IconoUsuario"
-                app:layout_constraintTop_toTopOf="@+id/img_TarjetaPerfil"
+                app:layout_constraintStart_toEndOf="@+id/img_FP_IconoUsuario"
+                app:layout_constraintTop_toTopOf="@+id/img_FP_TarjetaPerfil"
                 app:layout_constraintVertical_bias="0.242" />
 
             <TextView
-                android:id="@+id/btn_EditarMiPerfil1"
+                android:id="@+id/btn_FP_EditarMiPerfil1"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
@@ -69,18 +69,18 @@
                 android:text="Editar mi perfil"
                 android:textColor="@color/sub_sub_sub_color"
                 android:textSize="15sp"
-                app:layout_constraintStart_toEndOf="@+id/img_IconoUsuario"
-                app:layout_constraintTop_toBottomOf="@+id/txt_NombreUsuario" />
+                app:layout_constraintStart_toEndOf="@+id/img_FP_IconoUsuario"
+                app:layout_constraintTop_toBottomOf="@+id/txt_FP_NombreUsuario" />
 
             <ImageView
-                android:id="@+id/btn_EditarMiPerfil2"
+                android:id="@+id/btn_FP_EditarMiPerfil2"
                 android:layout_width="20dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="5dp"
                 android:src="@drawable/ic_edit_fill"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btn_EditarMiPerfil1"
-                app:layout_constraintTop_toBottomOf="@+id/txt_NombreUsuario"
+                app:layout_constraintStart_toEndOf="@+id/btn_FP_EditarMiPerfil1"
+                app:layout_constraintTop_toBottomOf="@+id/txt_FP_NombreUsuario"
                 app:layout_constraintVertical_bias="0.0"
                 app:tint="@color/sub_sub_sub_color" />
 
@@ -89,7 +89,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/btn_CerrarSesion"
+        android:id="@+id/btn_FP_CerrarSesion"
         android:layout_width="match_parent"
         android:layout_height="60sp"
         android:layout_marginStart="10dp"
