--- a/app/src/main/res/layout/actividad_login.xml
+++ b/app/src/main/res/layout/actividad_login.xml
@@ -49,7 +49,7 @@
 
 
                     android:rotation="45"
-                    android:src="@drawable/icon_app"
+                    android:src="@drawable/img_icon_app"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -81,7 +81,7 @@
                 android:layout_marginStart="32sp"
                 android:layout_marginEnd="32sp"
                 android:autofillHints="email"
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/background_edittext"
 
                 android:ems="10"
                 android:hint="Correo Electronico"
@@ -99,7 +99,7 @@
                 android:layout_marginTop="20sp"
                 android:layout_marginEnd="32sp"
                 android:autofillHints="password"
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/background_edittext"
 
                 android:ems="10"
                 android:hint="Contraseña"
