--- a/app/src/main/res/layout/actividad_pantalla_principal.xml
+++ b/app/src/main/res/layout/actividad_pantalla_principal.xml
@@ -36,6 +36,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/menu_nav_bottom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
