--- a/app/src/main/res/layout/actividad_registro.xml
+++ b/app/src/main/res/layout/actividad_registro.xml
@@ -33,7 +33,7 @@
                     android:contentDescription="Logo_app"
                     android:rotation="-45"
                     android:scaleX="-1"
-                    android:src="@drawable/icon_app"
+                    android:src="@drawable/img_icon_app"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
                 android:layout_height="49sp"
                 android:layout_marginStart="32sp"
                 android:layout_marginEnd="32sp"
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/background_edittext"
 
                 android:ems="10"
                 android:hint="Nombre de usuario"
@@ -96,7 +96,7 @@
                 android:layout_marginEnd="32sp"
                 android:autofillHints="emailAddress"
 
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/background_edittext"
 
                 android:ems="10"
                 android:hint="Correo Electronico"
@@ -115,7 +115,7 @@
                 android:layout_marginTop="19sp"
                 android:layout_marginEnd="32sp"
                 android:autofillHints="password"
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/background_edittext"
 
                 android:ems="10"
                 android:hint="Contraseña (mas de 6 caracteres)"
@@ -133,7 +133,7 @@
                 android:layout_marginTop="19sp"
                 android:layout_marginEnd="32sp"
                 android:autofillHints="password"
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/background_edittext"
 
                 android:ems="10"
                 android:hint="Confirma la contraseña"
