--- a/app/src/main/res/layout/fragmento_perfil.xml
+++ b/app/src/main/res/layout/fragmento_perfil.xml
@@ -40,7 +40,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:src="@drawable/ic_baseline_perfil_unselected"
+                android:src="@drawable/ic_outline_perfil"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/img_FP_TarjetaPerfil"
                 app:layout_constraintTop_toTopOf="parent"
@@ -77,7 +77,7 @@
                 android:layout_width="20dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="5dp"
-                android:src="@drawable/ic_edit_fill"
+                android:src="@drawable/ic_fill_edit"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/btn_FP_EditarMiPerfil1"
                 app:layout_constraintTop_toBottomOf="@+id/txt_FP_NombreUsuario"
