--- a/app/src/main/res/menu/menu_nav_bottom.xml
+++ b/app/src/main/res/menu/menu_nav_bottom.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Buscar"
-        android:icon="@drawable/ic_fill_buscar"
+        android:icon="@drawable/selector_ic_buscar"
         />
     <item
         android:id="@+id/navPerfil"
