--- a/app/src/main/res/drawable/ic_fill_perfil.xml
+++ b/app/src/main/res/drawable/ic_fill_perfil.xml
@@ -1,5 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="100dp" android:viewportHeight="24" android:viewportWidth="24" android:width="100dp">
       
-    <path android:fillColor="@android:color/white" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10s10,-4.48 10,-10S17.52,2 12,2zM12,6c1.93,0 3.5,1.57 3.5,3.5S13.93,13 12,13s-3.5,-1.57 -3.5,-3.5S10.07,6 12,6zM12,20c-2.03,0 -4.43,-0.82 -6.14,-2.88C7.55,15.8 9.68,15 12,15s4.45,0.8 6.14,2.12C16.43,19.18 14.03,20 12,20z"/>
+    <path android:fillColor="#000000" android:fillType="evenOdd" android:pathData="M6.75,6.5C6.75,3.601 9.101,1.25 12,1.25C14.899,1.25 17.25,3.601 17.25,6.5C17.25,9.399 14.899,11.75 12,11.75C9.101,11.75 6.75,9.399 6.75,6.5Z"/>
+      
+    <path android:fillColor="#000000" android:fillType="evenOdd" android:pathData="M4.25,18.571C4.25,15.632 6.632,13.25 9.571,13.25H14.429C17.368,13.25 19.75,15.632 19.75,18.571C19.75,20.879 17.879,22.75 15.571,22.75H8.429C6.121,22.75 4.25,20.879 4.25,18.571Z"/>
     
 </vector>
